# test_work

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.h
core/: CMakeLists.txt  buffer.cpp  buffer.h  column.cpp  column.h  core.h  gate.cpp  gate.h  message.cpp  message.h  messenger.cpp  messenger.h  meta_object.cpp  meta_object.h  object.cpp  object.h  object_container.cpp  object_container.h  platform.cpp  platform.h  platform_client.cpp  platform_client.h  platform_server.cpp  platform_server.h  replication.cpp  replication.h  row.cpp  row.h  serialization.cpp  serialization.h  string.cpp  string.h  table.cpp  table.h  table_view.cpp  table_view.h  wrapper.cpp  wrapper.h
server/: CMakeLists.txt  column.cpp  column.h  monkey.cpp  monkey.h  server.cpp  server.h  table.cpp  table.h
